added back missing database

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,6 @@
 
     <script src="./scripts/ApiManager.js"></script>
     <script src="./scripts/DomManager.js"></script>
-    <script src="scripts/wishlist.js"></script>
+    <script src="./scripts/wishlist.js"></script>
   </body>
 </html>
